--- a/css/style.css
+++ b/css/style.css
@@ -489,16 +489,22 @@ dialog button.modal-btn {
   padding: 0.5rem 1rem;
   color: #fff;
 }
+dialog button:focus {
+  outline-color: #dc143c;
+  outline-offset: 4px;
+  transition: 250ms;
+}
 dialog h3 {
   font-size: 2rem;
   margin-bottom: 2rem;
 }
 dialog h4 {
   font-size: 1rem;
+  font-size: clamp(1rem, 2vw, 1.125rem);
   text-wrap: pretty;
   text-wrap: balance;
   text-transform: capitalize;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.25rem;
   line-height: 1.4;
 }
 dialog h4 span {
@@ -2134,6 +2140,7 @@ form button:hover::after {
 }
 @media (min-width: 768px) {
   .skills-section {
+    padding: 10vh 0;
     background: linear-gradient(0deg, #ececec 10%, #fff 20%);
   }
 }
@@ -2167,9 +2174,12 @@ form button:hover::after {
   text-wrap: pretty;
   font-size: clamp(.975rem, 1.5vw, 1.05rem);
 }
-.skills-section .skills-content .skills-intro .skills-article p strong {
+.skills-section .skills-content .skills-intro .skills-article p .modal-link {
   font-weight: 600;
   color: inherit;
+}
+.skills-section .skills-content .skills-intro .skills-article p .modal-link:hover, .skills-section .skills-content .skills-intro .skills-article p .modal-link:focus {
+  color: #dc143c;
 }
 @media (min-width: 820px) {
   .skills-section .skills-content .skills-intro .skills-article p {
@@ -2181,6 +2191,27 @@ form button:hover::after {
   .skills-section .skills-content .skills-intro .skills-article p {
     max-width: 50%;
   }
+}
+.skills-section .skills-content .skills-intro .skills-article .page-link {
+  display: flex;
+  gap: 0.5rem;
+  margin-top: 0.5rem;
+  width: max-content;
+  text-transform: capitalize;
+  text-decoration: underline;
+  transition: 250ms;
+}
+@media (max-width: 450px) {
+  .skills-section .skills-content .skills-intro .skills-article .page-link {
+    display: none;
+  }
+}
+.skills-section .skills-content .skills-intro .skills-article .page-link:hover {
+  color: #dc143c;
+  text-decoration-color: transparent;
+}
+.skills-section .skills-content .skills-intro .skills-article .page-link:hover .icon {
+  translate: 0.25rem 0;
 }
 .skills-section .skills-content .skills-intro .skills-icons {
   display: flex;
@@ -2333,8 +2364,6 @@ form button:hover::after {
   width: 11rem;
   width: clamp(11rem, 10vw, 12rem);
   font-weight: 600;
-  font-size: 1rem;
-  font-size: clamp(1rem, 2vw, 1.125rem);
 }
 .skill-section .skill-section-title .section-title-image {
   position: absolute;
