--- a/sass/components/_dialog.scss
+++ b/sass/components/_dialog.scss
@@ -46,6 +46,12 @@ dialog {
             padding: 0.5rem 1rem;
             color: #fff;
         }
+
+        &:focus {
+            outline-color: abstracts.$span-crimson;
+            outline-offset: 4px;
+            transition: 250ms;
+        }
     }
 
     h3 {
@@ -55,10 +61,11 @@ dialog {
 
     h4 {
         font-size: 1rem;
+        font-size: abstracts.$font-clamp-sm;
         text-wrap: pretty;
         text-wrap: balance;
         text-transform: capitalize;
-        margin-bottom: 0.5rem;
+        margin-bottom: 0.25rem;
         line-height: 1.4;
 
         span {
