--- a/css/style.css
+++ b/css/style.css
@@ -2623,7 +2623,8 @@ form button:hover::after {
     padding: 10vh 5vw 10vh;
   }
 }
-.work .work-intro h3 {
+
+.work-intro h3 {
   text-transform: capitalize;
   text-align: center;
   font-size: 1.8rem;
@@ -2632,11 +2633,11 @@ form button:hover::after {
   width: max-content;
   margin-inline: auto;
 }
-.work .work-intro h3 span {
+.work-intro h3 span {
   color: #0007;
   text-transform: capitalize;
 }
-.work .work-intro h3::after {
+.work-intro h3::after {
   content: "";
   position: absolute;
   bottom: -0.5rem;
@@ -2645,32 +2646,34 @@ form button:hover::after {
   height: 0.125rem;
   background: linear-gradient(90deg, transparent, #0007, transparent);
 }
-.work .work-intro.io-item h3::after {
+.work-intro.io-item h3::after {
   transform: scaleX(0);
   transition: 1.5s;
 }
-.work .work-intro.active-item h3::after {
+.work-intro.active-item h3::after {
   transform: scaleX(1);
 }
-.work .work-container {
+
+.work-container {
   margin-top: 10vh;
 }
 @media (min-width: 820px) {
-  .work .work-container {
+  .work-container {
     margin-top: 15vh;
   }
 }
 @media (min-width: 820px) {
-  .work .work-container .item-flex-container {
+  .work-container .item-flex-container {
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
     gap: 1rem;
     border-radius: 0.25rem;
   }
 }
-.work .work-container .item {
+.work-container .item {
   overflow: hidden;
   border-radius: 0.25rem;
   background: #fff;
@@ -2679,42 +2682,36 @@ form button:hover::after {
   margin-bottom: 10vh;
 }
 @media (min-width: 576px) {
-  .work .work-container .item {
+  .work-container .item {
     padding: 0.5rem;
   }
 }
 @media (min-width: 768px) {
-  .work .work-container .item {
+  .work-container .item {
     background: #ffff;
   }
 }
-.work .work-container .item .item-header {
-  padding: 1rem 0.5rem 1rem;
+.work-container .item .item-header {
+  padding: 1rem;
 }
 @media (min-width: 576px) {
-  .work .work-container .item .item-header {
+  .work-container .item .item-header {
     padding: 1rem;
   }
 }
-@media (min-width: 768px) {
-  .work .work-container .item .item-header {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-}
 @media (min-width: 820px) {
-  .work .work-container .item .item-header {
+  .work-container .item .item-header {
     width: 50%;
+    height: 100%;
   }
 }
-.work .work-container .item .item-header .item-title {
+.work-container .item .item-header .item-title {
   text-transform: capitalize;
   font-weight: 700;
   font-size: 1rem;
   font-size: clamp(1rem, 2vw, 1.25rem);
 }
-.work .work-container .item .item-header .item-meta-data {
+.work-container .item .item-header .item-meta-data {
   display: flex;
   display: none;
   align-items: center;
@@ -2731,22 +2728,22 @@ form button:hover::after {
   left: 0;
 }
 @media (min-width: 820px) {
-  .work .work-container .item .item-header .item-meta-data {
+  .work-container .item .item-header .item-meta-data {
     gap: 1rem;
     background: transparent;
   }
 }
 @media (min-width: 820px) {
-  .work .work-container .item .item-header .item-meta-data {
+  .work-container .item .item-header .item-meta-data {
     justify-content: start;
   }
 }
 @media (min-width: 1024px) {
-  .work .work-container .item .item-header .item-meta-data {
+  .work-container .item .item-header .item-meta-data {
     bottom: -1rem;
   }
 }
-.work .work-container .item .item-header .item-meta-data p {
+.work-container .item .item-header .item-meta-data p {
   background: #1f252d;
   color: #f4f4f4;
   padding: 0.25rem 0.5rem;
@@ -2756,13 +2753,13 @@ form button:hover::after {
   box-shadow: 0.125rem 0.25rem 0.25rem rgba(0, 0, 0, 0.133);
   text-transform: uppercase;
 }
-.work .work-container .item .item-header .item-meta-data p::first-letter {
+.work-container .item .item-header .item-meta-data p::first-letter {
   text-transform: capitalize;
 }
-.work .work-container .item .item-header .item-meta-data p:hover {
+.work-container .item .item-header .item-meta-data p:hover {
   background: #475462;
 }
-.work .work-container .item .item-header .item-meta-data li {
+.work-container .item .item-header .item-meta-data li {
   border: 1px solid #000;
   border-radius: 0.25rem;
   padding: 0.25rem 0.5rem;
@@ -2772,61 +2769,61 @@ form button:hover::after {
   color: #f4f4f4;
   transition: 0.25s;
 }
-.work .work-container .item .item-header .item-meta-data li:hover {
+.work-container .item .item-header .item-meta-data li:hover {
   color: #b3c0cc;
 }
-.work .work-container .item .item-header .item-description {
+.work-container .item .item-header .item-description {
   margin: 0.5rem 0 1rem;
 }
-.work .work-container .item .item-header .item-description h4 {
+.work-container .item .item-header .item-description h4 {
   text-transform: capitalize;
   color: #0008;
   font-size: 0.9rem;
   font-size: clamp(.9rem, 2vw, 1.125rem);
 }
-.work .work-container .item .item-header .item-description p {
+.work-container .item .item-header .item-description p {
   color: #475462;
   font-weight: 400;
   font-size: 1rem;
   font-size: clamp(.95rem, 1.5vw, 1.05rem);
 }
-.work .work-container .item .item-header .item-description p::first-letter {
+.work-container .item .item-header .item-description p::first-letter {
   text-transform: capitalize;
 }
-.work .work-container .item .item-header .item-description ul {
+.work-container .item .item-header .item-description ul {
   margin: 1rem;
 }
-.work .work-container .item .item-header .item-description ul li {
+.work-container .item .item-header .item-description ul li {
   margin-bottom: 0.25rem;
 }
-.work .work-container .item .item-header .item-description ul li a {
+.work-container .item .item-header .item-description ul li a {
   text-transform: capitalize;
   font-size: 0.9rem;
   font-size: clamp(.9rem, 1.5vw, 1.125rem);
   color: inherit;
 }
-.work .work-container .item .item-header .item-description ul li i {
+.work-container .item .item-header .item-description ul li i {
   margin-left: 0.5rem;
   color: #b3c0cc;
   transform: scale(0.85);
   transition: 0.25s;
 }
-.work .work-container .item .item-header .item-description ul li:hover i {
+.work-container .item .item-header .item-description ul li:hover i {
   color: #dc143c;
   transform: scale(1);
 }
-.work .work-container .item .item-header .item-cta {
+.work-container .item .item-header .item-cta {
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
 }
 @media (min-width: 768px) {
-  .work .work-container .item .item-header .item-cta {
+  .work-container .item .item-header .item-cta {
     justify-content: start;
   }
 }
-.work .work-container .item .item-header .item-cta a {
+.work-container .item .item-header .item-cta a {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -2841,19 +2838,19 @@ form button:hover::after {
   transition: 0.25ms;
 }
 @media (max-width: 450px) {
-  .work .work-container .item .item-header .item-cta a {
+  .work-container .item .item-header .item-cta a {
     cursor: default;
   }
 }
 @media (min-width: 768px) {
-  .work .work-container .item .item-header .item-cta a {
+  .work-container .item .item-header .item-cta a {
     width: 10rem;
   }
 }
-.work .work-container .item .item-header .item-cta a i {
+.work-container .item .item-header .item-cta a i {
   transition: 0.25s;
 }
-.work .work-container .item .item-header .item-cta a.cta-primary {
+.work-container .item .item-header .item-cta a.cta-primary {
   background: #dc143c;
   border: none;
   color: #f4f4f4;
@@ -2861,7 +2858,7 @@ form button:hover::after {
   position: relative;
   isolation: isolate;
 }
-.work .work-container .item .item-header .item-cta a.cta-primary::after, .work .work-container .item .item-header .item-cta a.cta-primary::before {
+.work-container .item .item-header .item-cta a.cta-primary::after, .work-container .item .item-header .item-cta a.cta-primary::before {
   content: "";
   position: absolute;
   inset: 0;
@@ -2869,58 +2866,58 @@ form button:hover::after {
   transition: 250ms ease;
   z-index: -1;
 }
-.work .work-container .item .item-header .item-cta a.cta-primary::before {
+.work-container .item .item-header .item-cta a.cta-primary::before {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
   box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.05), inset -2px -2px 3px rgba(0, 0, 0, 0.15), 0.025rem 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
 }
-.work .work-container .item .item-header .item-cta a.cta-primary::after {
+.work-container .item .item-header .item-cta a.cta-primary::after {
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
   box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0.025rem 0.225rem 0.25rem rgba(0, 0, 0, 0.25);
   opacity: 0;
 }
-.work .work-container .item .item-header .item-cta a.cta-secondary {
+.work-container .item .item-header .item-cta a.cta-secondary {
   border: 1px solid #29323d;
   color: #1f252d;
 }
 @media (min-width: 768px) {
-  .work .work-container .item .item-header .item-cta a:hover {
+  .work-container .item .item-header .item-cta a:hover {
     transform: scale(0.98);
     letter-spacing: normal;
   }
-  .work .work-container .item .item-header .item-cta a:hover i {
+  .work-container .item .item-header .item-cta a:hover i {
     transform: translateX(-0.25rem);
   }
-  .work .work-container .item .item-header .item-cta a:hover::before {
+  .work-container .item .item-header .item-cta a:hover::before {
     opacity: 0;
   }
-  .work .work-container .item .item-header .item-cta a:hover::after {
+  .work-container .item .item-header .item-cta a:hover::after {
     opacity: 1;
   }
 }
 @media (max-width: 768px) {
-  .work .work-container .item .item-header .item-cta a:active {
+  .work-container .item .item-header .item-cta a:active {
     transform: scale(0.98);
     letter-spacing: normal;
   }
-  .work .work-container .item .item-header .item-cta a:active i {
+  .work-container .item .item-header .item-cta a:active i {
     transform: translateX(-0.25rem);
   }
-  .work .work-container .item .item-header .item-cta a:active::before {
+  .work-container .item .item-header .item-cta a:active::before {
     opacity: 0;
   }
-  .work .work-container .item .item-header .item-cta a:active::after {
+  .work-container .item .item-header .item-cta a:active::after {
     opacity: 1;
   }
 }
-.work .work-container .item .item-content {
+.work-container .item .item-content {
   padding: 0.5rem;
 }
 @media (min-width: 820px) {
-  .work .work-container .item .item-content {
+  .work-container .item .item-content {
     width: 50%;
   }
 }
-.work .work-container .item .item-content .item-image {
+.work-container .item .item-content .item-image {
   width: 100%;
   height: 100%;
   transform: scale(1.1);
@@ -2929,7 +2926,7 @@ form button:hover::after {
   position: relative;
   isolation: isolate;
 }
-.work .work-container .item .item-content .item-image::after {
+.work-container .item .item-content .item-image::after {
   content: "";
   position: absolute;
   inset: 0;
@@ -2938,7 +2935,7 @@ form button:hover::after {
   border-radius: inherit;
   transition: 250ms;
 }
-.work .work-container .item .item-content .item-image img {
+.work-container .item .item-content .item-image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -2947,54 +2944,54 @@ form button:hover::after {
   transition: 350ms;
 }
 @media (min-width: 768px) {
-  .work .work-container .item .item-content .item-image {
+  .work-container .item .item-content .item-image {
     transform: scale(1.125);
   }
-  .work .work-container .item .item-content .item-image img {
+  .work-container .item .item-content .item-image img {
     border-radius: 0;
   }
 }
 @media (max-width: 820px) {
-  .work .work-container .item.io-item {
+  .work-container .item.io-item {
     opacity: 1;
     transform: translateY(5vh);
     transition: 1.25s;
   }
-  .work .work-container .item.active-item {
+  .work-container .item.active-item {
     opacity: 1;
     transform: translateY(0);
   }
 }
 @media (min-width: 820px) {
-  .work .work-container .item.io-item .item-header {
+  .work-container .item.io-item .item-header {
     opacity: 1;
     transform: translateX(5vw);
     transition: 1s;
   }
-  .work .work-container .item.io-item .item-content {
+  .work-container .item.io-item .item-content {
     opacity: 1;
     transform: translateX(-5vw);
     transition: 1s;
   }
-  .work .work-container .item.active-item .item-header {
+  .work-container .item.active-item .item-header {
     opacity: 1;
     transform: translateX(0);
   }
-  .work .work-container .item.active-item .item-content {
+  .work-container .item.active-item .item-content {
     opacity: 1;
     transform: translateX(0);
   }
 }
-.work .work-container .item:hover .item-content .item-image {
+.work-container .item:hover .item-content .item-image {
   transform: scale(1);
   transition: 500ms;
 }
-.work .work-container .item:hover .item-content .item-image::after {
+.work-container .item:hover .item-content .item-image::after {
   opacity: 1;
   transition: 500ms ease-out;
 }
 @media (min-width: 768px) {
-  .work .work-container .item:hover .item-content img {
+  .work-container .item:hover .item-content img {
     border-radius: 0.25rem;
   }
 }
