--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -103,7 +103,7 @@
         }
         
         .item-header {
-            padding: 1rem;
+            padding: 0.5rem 1rem 0.5rem 0.5rem;
 
             @include abstracts.sm {
                 padding: 1rem;
