--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -166,10 +166,11 @@
                     .btn {
                         i, .icon {
                             opacity: 1;
+                            transition-delay: 350ms;
                         }
                     }
                 }
-                
+
             }
             
         }
