--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,7 +8,7 @@ html {
 
 body {
     color: abstracts.$overlay-blue-darker;
-    
+    max-width: 100%;
     img {
         display: block;
         max-width: 100%;
