--- a/css/style.css
+++ b/css/style.css
@@ -1905,14 +1905,17 @@ form button:hover::after {
 .grid-title {
   grid-area: grid-title;
 }
-.grid-title h1 {
-  font-weight: 200;
-  font-size: 0.95rem;
-  font-size: clamp(0.95rem, 1.25vw, 1.025rem);
+.grid-title h2 {
+  font-weight: 400;
   cursor: default;
   transition: 250ms;
+  font-size: 0.95rem;
+  font-size: clamp(0.95rem, 1.25vw, 1.025rem);
+  font-size: 1rem;
+  font-size: clamp(1rem, 2vw, 1.25rem);
+  margin-bottom: 1rem;
 }
-.grid-title h2 {
+.grid-title h1 {
   font-size: 2.5rem;
   font-size: clamp(1.5rem, 4vw, 2.5rem);
   text-wrap: balance;
@@ -1922,9 +1925,6 @@ form button:hover::after {
   .grid-title {
     place-self: center left;
   }
-}
-.grid-title:hover h1 {
-  font-weight: 500;
 }
 
 .grid-image {
