--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -74,16 +74,18 @@
 .grid-title {
     grid-area: grid-title;
 
-    h1 {
-        font-weight: 200;
-        font-size: .95rem;
-        font-size: clamp(0.95rem, 1.25vw, 1.025rem);
+    h2 {
+        font-weight: 400;
         cursor: default;
         transition: 250ms;
-        
+        font-size: .95rem;
+        font-size: clamp(0.95rem, 1.25vw, 1.025rem);
+        font-size: 1rem;
+        font-size: clamp(1rem, 2vw, 1.25rem);
+        margin-bottom: 1rem;
     }
 
-    h2 {
+    h1 {
         font-size: 2.5rem;
         font-size: clamp(1.5rem, 4vw, 2.5rem);
         text-wrap: balance;
@@ -96,11 +98,11 @@
     }
 
     // TITLE HOVER
-    &:hover {
-        h1 {
-            font-weight: 500;
-        }
-    }
+    // &:hover {
+    //     h1 {
+    //         font-weight: 500;
+    //     }
+    // }
 }
 
 // HERO IMAGE
