--- a/css/style.css
+++ b/css/style.css
@@ -1905,20 +1905,18 @@ form button:hover::after {
 .grid-title {
   grid-area: grid-title;
 }
-.grid-title h2 {
+.grid-title h1 {
+  margin-bottom: 1rem;
   font-weight: 400;
-  cursor: default;
-  transition: 250ms;
-  font-size: 0.95rem;
-  font-size: clamp(0.95rem, 1.25vw, 1.025rem);
   font-size: 1rem;
   font-size: clamp(1rem, 2vw, 1.25rem);
-  margin-bottom: 1rem;
+  cursor: default;
+  transition: 250ms;
 }
-.grid-title h1 {
-  font-size: 2.5rem;
-  font-size: clamp(1.5rem, 4vw, 2.5rem);
-  text-wrap: balance;
+.grid-title h2 {
+  line-height: 1.2;
+  font-size: 1.8rem;
+  font-size: clamp(1.8rem, 4vw, 2.5rem);
   font-weight: 700;
 }
 @media (min-width: 820px) {
