--- a/css/style.css
+++ b/css/style.css
@@ -2750,6 +2750,8 @@ form button:hover::after {
 }
 .work-container .item .item-header {
   padding: 0.5rem 0.25rem 0.5rem 0.5rem;
+  padding: 0.5rem 0.5rem 1rem;
+  padding: 1rem 0.5rem 4rem;
 }
 @media (min-width: 576px) {
   .work-container .item .item-header {
@@ -2769,18 +2771,19 @@ form button:hover::after {
   font-size: clamp(1rem, 2vw, 1.25rem);
 }
 .work-container .item .item-header .item-meta-data {
+  border: 2px solid yellow;
   display: flex;
   display: none;
   align-items: center;
   justify-content: space-evenly;
   gap: 1rem;
   flex-wrap: wrap;
+  background: #1f252d;
   margin: 1.5rem 0 0;
   padding: 0.5rem 1rem;
   list-style: none;
   position: absolute;
   bottom: 0;
-  background: #1f252d;
   width: 100%;
   left: 0;
 }
@@ -2843,6 +2846,7 @@ form button:hover::after {
   font-weight: 400;
   font-size: 1rem;
   font-size: clamp(.95rem, 1.5vw, 1.05rem);
+  margin-bottom: 0.5rem;
 }
 .work-container .item .item-header .item-description p::first-letter {
   text-transform: capitalize;
