--- a/css/style.css
+++ b/css/style.css
@@ -2751,11 +2751,12 @@ form button:hover::after {
 .work-container .item .item-header {
   padding: 0.5rem 0.25rem 0.5rem 0.5rem;
   padding: 0.5rem 0.5rem 1rem;
-  padding: 1rem 0.5rem 4rem;
+  padding: 1rem 0.5rem 3rem;
 }
-@media (min-width: 576px) {
+@media (min-width: 768px) {
   .work-container .item .item-header {
-    padding: 1rem;
+    display: flex;
+    flex-direction: column;
   }
 }
 @media (min-width: 820px) {
@@ -2769,68 +2770,6 @@ form button:hover::after {
   font-weight: 700;
   font-size: 1rem;
   font-size: clamp(1rem, 2vw, 1.25rem);
-}
-.work-container .item .item-header .item-meta-data {
-  border: 2px solid yellow;
-  display: flex;
-  display: none;
-  align-items: center;
-  justify-content: space-evenly;
-  gap: 1rem;
-  flex-wrap: wrap;
-  background: #1f252d;
-  margin: 1.5rem 0 0;
-  padding: 0.5rem 1rem;
-  list-style: none;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  left: 0;
-}
-@media (min-width: 820px) {
-  .work-container .item .item-header .item-meta-data {
-    gap: 1rem;
-    background: transparent;
-  }
-}
-@media (min-width: 820px) {
-  .work-container .item .item-header .item-meta-data {
-    justify-content: start;
-  }
-}
-@media (min-width: 1024px) {
-  .work-container .item .item-header .item-meta-data {
-    bottom: -1rem;
-  }
-}
-.work-container .item .item-header .item-meta-data p {
-  background: #1f252d;
-  color: #f4f4f4;
-  padding: 0.25rem 0.5rem;
-  border-radius: 0.25rem;
-  font-size: 0.75rem;
-  text-transform: lowercase;
-  box-shadow: 0.125rem 0.25rem 0.25rem rgba(0, 0, 0, 0.133);
-  text-transform: uppercase;
-}
-.work-container .item .item-header .item-meta-data p::first-letter {
-  text-transform: capitalize;
-}
-.work-container .item .item-header .item-meta-data p:hover {
-  background: #475462;
-}
-.work-container .item .item-header .item-meta-data li {
-  border: 1px solid #000;
-  border-radius: 0.25rem;
-  padding: 0.25rem 0.5rem;
-  font-size: 0.8rem;
-  text-transform: uppercase;
-  background: #1f252d;
-  color: #f4f4f4;
-  transition: 0.25s;
-}
-.work-container .item .item-header .item-meta-data li:hover {
-  color: #b3c0cc;
 }
 .work-container .item .item-header .item-description {
   margin: 0.5rem 0 1rem;
@@ -2969,6 +2908,64 @@ form button:hover::after {
   .work-container .item .item-header .item-cta a:active::after {
     opacity: 1;
   }
+}
+.work-container .item .item-header .item-meta-data {
+  display: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  flex-wrap: wrap;
+  background: #1f252d;
+  padding: 0.25rem 1rem;
+  list-style: none;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  left: 0;
+}
+@media (min-width: 820px) {
+  .work-container .item .item-header .item-meta-data {
+    gap: 1rem;
+    border-radius: 0.25rem;
+    left: 0.5rem;
+    width: 95%;
+    background: transparent;
+  }
+}
+@media (min-width: 820px) {
+  .work-container .item .item-header .item-meta-data {
+    justify-content: start;
+  }
+}
+@media (min-width: 1024px) {
+  .work-container .item .item-header .item-meta-data {
+    bottom: -1rem;
+  }
+}
+.work-container .item .item-header .item-meta-data p {
+  background: #1f252d;
+  color: #f4f4f4;
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.25rem;
+  font-size: 0.65rem;
+  text-transform: uppercase;
+}
+.work-container .item .item-header .item-meta-data p:hover {
+  background: #475462;
+}
+.work-container .item .item-header .item-meta-data li {
+  border: 1px solid #000;
+  border-radius: 0.25rem;
+  padding: 0.25rem 0.5rem;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  background: #1f252d;
+  color: #f4f4f4;
+  transition: 0.25s;
+}
+.work-container .item .item-header .item-meta-data li:hover {
+  color: #b3c0cc;
 }
 .work-container .item .item-content {
   padding: 0.5rem;
