--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -2,12 +2,17 @@
 // contact
     #contact {
         scroll-margin-top: 5vh;
-        background: #f4f4f4;
         padding: 10vh 5vw;
         min-height: 90vh;
+
         @include abstracts.lg {
             padding: 10vh 5vw 5vh;
         }
+
+        @include abstracts.dark {
+            background: abstracts.$overlay-blue-darker;
+        }
+
     }
     .contact {
         flex-direction: column;
@@ -52,8 +57,8 @@
             isolation: isolate;
             position: relative;
             transform-style: preserve-3d;
-            // transform: rotateZ(5deg);
-            // perspective-origin: 10rem;
+
+            
 
             // PSEUDO BG
             &::before, &::after {
@@ -81,6 +86,17 @@
                 background: radial-gradient(#f4f4f4, #fff 50%);
                 box-shadow: 
                             0.25rem 0.5rem 0.25rem rgba(0, 0, 0, 0.1);
+            }
+
+            @include abstracts.dark {
+                background: abstracts.$overlay-blue-light;
+
+                &::before {
+                    background: abstracts.$overlay-blue-light;
+                }
+                &::after {
+                    background: abstracts.$overlay;
+                }
             }
 
             // TITLE = ICON + H3 + PSEUDO TEXT 
